<resources>
    <string name="app_name">TaxiNdaani</string>
    <string name="directionsApiKey">AIzaSyAs6aHRNht9MLctP8wpp3nAYLMQ_SuieT0</string>
    <string name="title_activity_maps">TaxiNdaani</string>
    <string name="rationale_storage">you need to grant access to the phone\'s location information for the app to work</string>
    <string name="title_location_permission">Location permission</string>
    <string name="ok">ok</string>

    <!--AuthActivity-->
    <string name="enter_phone_hint">Enter phone number</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_invalid_phone">This phone number is invalid</string>
    <string name="btn_verify_text">Verify</string>
    <!--Auth Activity Dialog-->
    <string name="positive_button_text">Ok</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <!-- Navigation Drawer menu labels -->
    <string name="nav_home">Home</string>
    <string name="nav_payments">My Payments</string>

    <string name="nav_notifications">Notifications</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about_us">About Us</string>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>My Payments</item>
        <item>Movies</item>
        <item>Notifications</item>
        <item>Settings</item>
    </string-array>

    <string name="activity_title_about_us">About Us</string>
    <string name="activity_title_privacy_policy">Privacy Policy</string>
    <string name="action_logout">Logout</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="estimated_payment_title">Estimated Cost</string>

</resources>
